--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,17 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+
+.cards{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5%;
+  
+}
+
+.card{
+  width: 400px;
+}
